--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
                 </ul>
             </nav>
             <!-- Контактні дані -->
-            <div class="header-group">
                 <ul class="header-contact-list list">
                     <li class="header-contact-list-item"><a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
                     <li class="header-contact-list-item"><a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
         </div>
     </header>
 
@@ -56,20 +54,20 @@
         <section class="benefits">
             <div class="benefits-container container">
                 <h2 hidden>Преимущества</h2>
-                <ul class="benefits-list list">
-                    <li class="benefits-list-item">
+                <ul class="benefits-list benefits-set list">
+                    <li class="benefits-list-item benefits-set-item">
                         <h3 class="benefits-list-item-title">Внимание к деталям</h3>
                         <p class="benefits-list-item-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="benefits-list-item">
+                    <li class="benefits-list-item benefits-set-item">
                         <h3 class="benefits-list-item-title">Пунктуальность</h3>
                         <p class="benefits-list-item-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="benefits-list-item">
+                    <li class="benefits-list-item benefits-set-item">
                         <h3 class="benefits-list-item-title">Планирование</h3>
                         <p class="benefits-list-item-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="benefits-list-item"> 
+                    <li class="benefits-list-item benefits-set-item"> 
                         <h3 class="benefits-list-item-title">Современные технологии</h3>
                         <p class="benefits-list-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
