--- a/portfolio.html
+++ b/portfolio.html
@@ -63,48 +63,66 @@
                 <ul class="portfolio-list card-set list">
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Технокряк</h2>
-                        <p class="portfolio-list-item-text">Веб-сайт</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Технокряк</h2>
+                            <p class="portfolio-list-item-text">Веб-сайт</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-2.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="portfolio-list-item-text">Дизайн</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-list-item-text">Дизайн</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-3.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Ресторан Seafood</h2>
-                        <p class="portfolio-list-item-text">Приложение</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Ресторан Seafood</h2>
+                            <p class="portfolio-list-item-text">Приложение</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-4.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Проект Prime</h2>
-                        <p class="portfolio-list-item-text">Маркетинг</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Проект Prime</h2>
+                            <p class="portfolio-list-item-text">Маркетинг</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-5.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Проект Boxes</h2>
-                        <p class="portfolio-list-item-text">Приложение</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Проект Boxes</h2>
+                            <p class="portfolio-list-item-text">Приложение</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-6.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Inspiration has no Borders</h2>
-                        <p class="portfolio-list-item-text">Веб-сайт</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Inspiration has no Borders</h2>
+                            <p class="portfolio-list-item-text">Веб-сайт</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-7.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Издание Limited Edition</h2>
-                        <p class="portfolio-list-item-text">Дизайн</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Издание Limited Edition</h2>
+                            <p class="portfolio-list-item-text">Дизайн</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-8.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Проект LAB</h2>
-                        <p class="portfolio-list-item-text">Маркетинг</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Проект LAB</h2>
+                            <p class="portfolio-list-item-text">Маркетинг</p>
+                        </div>
                     </a></li>
                     <li class="portfolio-list-item card-set-item"><a class="portfolio-list-link link" href="">
                         <img src="./images/hw-2/img-9.jpg" alt="" width="370" height="294">
-                        <h2 class="portfolio-list-item-title">Growing Business</h2>
-                        <p class="portfolio-list-item-text">Приложение</p>
+                        <div class="portfolio-list-item-info">
+                            <h2 class="portfolio-list-item-title">Growing Business</h2>
+                            <p class="portfolio-list-item-text">Приложение</p>
+                        </div>
                     </a></li>
                 </ul>
             </div>
