Remarks corrected - extreme margins are removed

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,11 +53,11 @@
                 <h1 hidden>Портфолио</h1>
                 <!-- Фільтр -->
                 <ul class="portfolio-filter-list list">
-                    <li><button class="portfolio-filter-btn btn" type="button">Все</button></li>
-                    <li><button class="portfolio-filter-btn btn" type="button">Веб-сайты</button></li>
-                    <li><button class="portfolio-filter-btn btn" type="button">Приложения</button></li>
-                    <li><button class="portfolio-filter-btn btn" type="button">Дизайн</button></li>
-                    <li><button class="portfolio-filter-btn btn" type="button">Маркетинг</button></li>
+                    <li class="portfolio-filter-list-item"><button class="portfolio-filter-btn btn" type="button">Все</button></li>
+                    <li class="portfolio-filter-list-item"><button class="portfolio-filter-btn btn" type="button">Веб-сайты</button></li>
+                    <li class="portfolio-filter-list-item"><button class="portfolio-filter-btn btn" type="button">Приложения</button></li>
+                    <li class="portfolio-filter-list-item"><button class="portfolio-filter-btn btn" type="button">Дизайн</button></li>
+                    <li class="portfolio-filter-list-item"><button class="portfolio-filter-btn btn" type="button">Маркетинг</button></li>
                 </ul>
                 <!-- Портфоліо -->
                 <ul class="portfolio-list card-set list">
